title align corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,6 @@ p {
 
 #title .container-fluid {
   padding: 3% 15% 7%;
-  text-align: left;
 }
 
 /* Download Buttons */
